--- a/TK_webApp/tk_webapp/pubspec.yaml
+++ b/TK_webApp/tk_webapp/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # Add Google Fonts Package
+  google_fonts: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
