--- a/TK_webApp/tk_webapp/pubspec.yaml
+++ b/TK_webApp/tk_webapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 
   # Add Google Fonts Package
   google_fonts: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,6 +61,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - lib/assets/TK_Logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
